[gd_scene load_steps=6 format=3 uid="uid://dmy85mwkgom6i"]

[ext_resource type="Script" uid="uid://xsmyme3j42hn" path="res://components/popups/pause_screen.gd" id="1_y4fnm"]
[ext_resource type="Texture2D" uid="uid://bt7khdre4vr0l" path="res://assets/ui/redbuttonpressed.png" id="2_vgswq"]
[ext_resource type="Texture2D" uid="uid://dgbuedoo1sjgn" path="res://assets/ui/redbutton.png" id="3_4tvkn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jprcr"]
texture = ExtResource("2_vgswq")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6kjxs"]
texture = ExtResource("3_4tvkn")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4fnm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Paused"

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Resume"

[node name="SaveButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Save"

[node name="SleepButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Sleep"

[node name="LogoutButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Logout"

[node name="ShutdownButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_styles/pressed = SubResource("StyleBoxTexture_jprcr")
theme_override_styles/normal = SubResource("StyleBoxTexture_6kjxs")
text = " Shut Down "
